# contents-autouploader

./: .env.example  .env.local.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: config.local.yaml  config.prod.yaml
src/: __init__.py  config.py  main.py
src/generators/: __init__.py  ppt_generator.py  script_generator.py  tts_generator.py  video_generator.py
src/models/: __init__.py  presentation.py  script.py
src/services/: __init__.py  ai_service.py  sync_service.py  youtube_service.py
src/utils/: __init__.py  helpers.py
tests/: __init__.py  test_models.py  test_utils.py
